--- a/drivers/video/fbdev/msm/Kconfig
+++ b/drivers/video/fbdev/msm/Kconfig
@@ -129,4 +129,12 @@ config FLICKER_FREE
 	The flicker free provides flicker free function without change
 	panel hardware brightness to avoid PWM flicker on OLED devices.
 
+config FB_MSM_MDSS_KCAL_CTRL
+	depends on FB_MSM_MDSS
+	bool "MDSS color control"
+	default n
+	---help---
+	Enable sysfs for rgb/lut control for mdss-mdp display controllers
+	in the MDSS sub-system.
+
 endif
