defconfig: Use Westwood+ TCP congestion algorithm by d…
…efault

Change-Id: I89a2b4ba4c4575440d1b423d71a066f508f4983a
Signed-off-by: Akhil Narang <akhilnarang.1999@gmail.com>
Signed-off-by: Nanhumly <admin@warbler.cc>.

--- a/arch/arm64/configs/lineage_oneplus5_defconfig
+++ b/arch/arm64/configs/lineage_oneplus5_defconfig
@@ -571,6 +571,11 @@ CONFIG_SPS_SUPPORT_NDP_BAM=y
 CONFIG_GSI=y
 CONFIG_IPA3=y
 CONFIG_RMNET_IPA3=y
+CONFIG_TCP_CONG_ADVANCED=y
+# CONFIG_TCP_CONG_BIC is not set
+# CONFIG_TCP_CONG_CUBIC is not set
+CONFIG_TCP_CONG_WESTWOOD=y
+# CONFIG_TCP_CONG_HTCP is not set
 CONFIG_GPIO_USB_DETECT=y
 CONFIG_MSM_MHI=y
 CONFIG_MSM_MHI_UCI=y
